Fix spacing

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,6 @@
 	--clr-bg-light-transp: #f5ebe900;
 	--clr-drk: #451708;
 	--clr-accent: rgba(119, 82, 105, 0.836);
-	--scroll-element-height: 200px;
 	--gradient: linear-gradient(
 		90deg,
 		rgba(2, 0, 36, 1) 0%,
@@ -18,6 +17,8 @@
 		rgba(208, 43, 206, 1) 0%,
 		rgba(96, 228, 255, 1) 100%
 	);
+	--space: 1.8rem;
+	--scroll-element-height: 220px;
 }
 
 /* Box sizing rules */
@@ -148,11 +149,9 @@ body {
 	width: 90%;
 	max-width: 360px;
 	border-radius: 50px;
-	height: 350px;
-	/* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; */
+	height: calc(var(--scroll-element-height) + 130px);
 	position: relative;
-	outline: 1px solid pink;
-	padding-top: 2rem;
+	padding-top: var(--space);
 }
 
 .quote--box::after {
@@ -192,7 +191,7 @@ body {
 	min-height: var(--scroll-element-height);
 	display: grid;
 	align-content: center;
-	padding: 2rem 1.5rem 2rem 2rem;
+	padding: 0 var(--space);
 }
 
 .fader {
@@ -245,10 +244,9 @@ body {
 
 .scroll--indicator {
 	font-weight: 900;
-	transform: translateY(20px);
 	opacity: 0.75;
 	transition: opacity 0.25s linear;
-	padding: 0 2rem;
+	padding: 0 var(--space);
 	position: relative;
 	z-index: 999999;
 }
